--- a/index.html
+++ b/index.html
@@ -5,30 +5,27 @@
   </head>
   <body>
     <div class='flags'>
-      <div class='flag japan'></div>
       <div class='flag france'></div>
       <div class='flag italy'></div>
       <div class='flag belgium'></div>
       <div class='flag nigeria'></div>
       <div class='flag cote'></div>
+      <hr>
       <div class='flag germany'></div>
       <div class='flag holland'></div>
       <div class='flag russia'></div>
       <div class='flag columbia'></div>
+      <hr>
       <div class='flag england'></div>
       <div class='flag switzerland'></div>
-      <div class='flag costarica'>
-        <div class='a'></div>
-      </div>
+      <div class='flag costarica'></div>
+      <div class='flag japan'></div>
+      <hr>
       <div class='flag greece'>
         <div class='a'></div>
-        <div class='a'></div>
-        <div class='a'></div>
-        <div class='a'></div>
-        <div class='a'></div>
-        <div class='b'></div>
       </div>
+      <hr>
+      <div class='star'></div>
     </div>
-    <div class='star'></div>
   </body>
 </html>
