--- a/index.html
+++ b/index.html
@@ -1,31 +1,116 @@
 <!DOCTYPE html>
-<html>
+<html lang='zh'>
   <head>
+    <meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
     <link href='ui.css' rel='stylesheet' type='text/css'>
   </head>
   <body>
+    <div class='intro'>
+      <div class='avatar'>
+        <img src='https://avatars0.githubusercontent.com/u/322486?s=460'>
+      </div>
+      <div class='desc'>
+        <span>Flags with pure HTML/CSS.</span>
+        <span>developd by</span>
+        <a href='https://github.com/ben7th' target='_blank'>ben7th</a>
+      </div>
+    </div>
+    <hr>
     <div class='flags'>
-      <div class='flag france'></div>
-      <div class='flag italy'></div>
-      <div class='flag belgium'></div>
-      <div class='flag nigeria'></div>
-      <div class='flag cote'></div>
-      <hr>
-      <div class='flag germany'></div>
-      <div class='flag holland'></div>
-      <div class='flag russia'></div>
-      <div class='flag columbia'></div>
-      <hr>
-      <div class='flag england'></div>
-      <div class='flag switzerland'></div>
-      <div class='flag costarica'></div>
-      <div class='flag japan'></div>
-      <hr>
-      <div class='flag greece'>
-        <div class='a'></div>
+      <div class='f'>
+        <div class='flag france'></div>
+        <div class='name'>法国</div>
+      </div>
+      <div class='f'>
+        <div class='flag italy'></div>
+        <div class='name'>意大利</div>
+      </div>
+      <div class='f'>
+        <div class='flag belgium'></div>
+        <div class='name'>比利时</div>
+      </div>
+      <div class='f'>
+        <div class='flag nigeria'></div>
+        <div class='name'>尼日利亚</div>
+      </div>
+      <div class='f'>
+        <div class='flag cote'></div>
+        <div class='name'>科特迪瓦</div>
       </div>
       <hr>
-      <div class='star'></div>
+      <div class='f'>
+        <div class='flag germany'></div>
+        <div class='name'>德国</div>
+      </div>
+      <div class='f'>
+        <div class='flag holland'></div>
+        <div class='name'>荷兰</div>
+      </div>
+      <div class='f'>
+        <div class='flag russia'></div>
+        <div class='name'>俄罗斯</div>
+      </div>
+      <div class='f'>
+        <div class='flag columbia'></div>
+        <div class='name'>哥伦比亚</div>
+      </div>
+      <hr>
+      <div class='f'>
+        <div class='flag england'></div>
+        <div class='name'>英格兰</div>
+      </div>
+      <div class='f'>
+        <div class='flag switzerland'></div>
+        <div class='name'>瑞士</div>
+      </div>
+      <div class='f'>
+        <div class='flag costarica'></div>
+        <div class='name'>哥斯达黎加</div>
+      </div>
+      <div class='f'>
+        <div class='flag japan'></div>
+        <div class='name'>日本</div>
+      </div>
+      <hr>
+      <div class='f'>
+        <div class='flag greece'>
+          <div class='a'></div>
+        </div>
+        <div class='name'>希腊</div>
+      </div>
+      <div class='f'>
+        <div class='flag cameroon'>
+          <div class='a'></div>
+        </div>
+        <div class='name'>喀麦隆</div>
+      </div>
+      <div class='f'>
+        <div class='flag chile'>
+          <div class='a'></div>
+        </div>
+        <div class='name'>智利</div>
+      </div>
+      <div class='f'>
+        <div class='flag ghana'>
+          <div class='a'></div>
+        </div>
+        <div class='name'>加纳</div>
+      </div>
+      <div class='f'>
+        <div class='flag honduras'>
+          <div class='a1'></div>
+          <div class='a2'></div>
+          <div class='a3'></div>
+          <div class='a4'></div>
+          <div class='a5'></div>
+        </div>
+        <div class='name'>洪都拉斯</div>
+      </div>
+      <hr>
+      <div class='starbox'>
+        <div class='star'></div>
+      </div>
+      <div class='star1'></div>
     </div>
   </body>
 </html>
