--- a/index.html
+++ b/index.html
@@ -107,6 +107,69 @@
         <div class='name'>洪都拉斯</div>
       </div>
       <hr>
+      <div class='f'>
+        <div class='flag usa'>
+          <div class='l'></div>
+          <div class='l'></div>
+          <div class='l'></div>
+          <div class='aa'>
+            <div class='a i1j1'></div>
+            <div class='a i1j2'></div>
+            <div class='a i1j3'></div>
+            <div class='a i1j4'></div>
+            <div class='a i1j5'></div>
+            <div class='a i2j1'></div>
+            <div class='a i2j2'></div>
+            <div class='a i2j3'></div>
+            <div class='a i2j4'></div>
+            <div class='a i2j5'></div>
+            <div class='a i3j1'></div>
+            <div class='a i3j2'></div>
+            <div class='a i3j3'></div>
+            <div class='a i3j4'></div>
+            <div class='a i3j5'></div>
+            <div class='a i4j1'></div>
+            <div class='a i4j2'></div>
+            <div class='a i4j3'></div>
+            <div class='a i4j4'></div>
+            <div class='a i4j5'></div>
+            <div class='a i5j1'></div>
+            <div class='a i5j2'></div>
+            <div class='a i5j3'></div>
+            <div class='a i5j4'></div>
+            <div class='a i5j5'></div>
+            <div class='a i6j1'></div>
+            <div class='a i6j2'></div>
+            <div class='a i6j3'></div>
+            <div class='a i6j4'></div>
+            <div class='a i6j5'></div>
+          </div>
+          <div class='bb'>
+            <div class='b i1j1'></div>
+            <div class='b i1j2'></div>
+            <div class='b i1j3'></div>
+            <div class='b i1j4'></div>
+            <div class='b i2j1'></div>
+            <div class='b i2j2'></div>
+            <div class='b i2j3'></div>
+            <div class='b i2j4'></div>
+            <div class='b i3j1'></div>
+            <div class='b i3j2'></div>
+            <div class='b i3j3'></div>
+            <div class='b i3j4'></div>
+            <div class='b i4j1'></div>
+            <div class='b i4j2'></div>
+            <div class='b i4j3'></div>
+            <div class='b i4j4'></div>
+            <div class='b i5j1'></div>
+            <div class='b i5j2'></div>
+            <div class='b i5j3'></div>
+            <div class='b i5j4'></div>
+          </div>
+        </div>
+        <div class='name'>美国</div>
+      </div>
+      <hr>
       <div class='starbox'>
         <div class='star'></div>
       </div>
