--- a/index.html
+++ b/index.html
@@ -108,6 +108,15 @@
       </div>
       <hr>
       <div class='f'>
+        <div class='flag algeria'>
+          <div class='a'></div>
+          <div class='bb'>
+            <div class='b'></div>
+          </div>
+        </div>
+        <div class='name'>阿尔及利亚</div>
+      </div>
+      <div class='f'>
         <div class='flag usa'>
           <div class='l'></div>
           <div class='l'></div>
